--- a/Ejemplo_Basico_TensorFlow.ipynb
+++ b/Ejemplo_Basico_TensorFlow.ipynb
@@ -55,7 +55,7 @@
    "source": [
     "# Por facilidad, declaramos una variable que indique el tamaño del conjunto \n",
     "#      de datos de entrenamiento.\n",
-    "observaciones = 1000\n",
+    "observaciones = 1000000\n",
     "\n",
     "x1 = np.random.uniform(low = -10, high = 10, size = (observaciones,1))\n",
     "x2 = np.random.uniform(-10, 10, (observaciones,1)) # nótese que no se requieren las palabras clave\n",
